@@ -2,23 +2,18 @@
     <span class="kerror-str">{errstr} in</span>
     <span class="kerror-path">{file}, {line}</span>
   </li>
-
-
   {search}
   <li class="ktool-tabs" data-instance="{KrexxId}">
     <div class="ktab kactive" data-what="kdebug">debug</div>
     <div class="ktab" data-what="kconfiguration">config</div>
-    <div class="ktab" data-what="klinks">links</div>
+    <div class="ktab" data-what="kplugins">plugins</div>
     <div class="ktab ksearchbutton">search</div>
   </li>
 
 </ul>
 <div class="kbg-wrapper knormal">
-  <ul class="knode klinks khidden kpayload">
-    <li class="kchild"><a class="kel" href="https://docs.typo3.org/typo3cms/extensions/includekrexx/" target="_blank"><span>Documentation</span></a></li>
-    <li class="kchild"><a class="kel" href="https://github.com/brainworxx/kreXX/issues" target="_blank"><span>Bug reports</span></a></li>
-    <li class="kchild"><a class="kel" href="http://typo3.org/extensions/repository/view/includekrexx" target="_blank"><span>TYPO3 kreXX</span></a></li>
-    <li class="kchild"><a class="kel" href="http://www.magentocommerce.com/magento-connect/include-krexx.html" target="_blank"><span>Magento kreXX</span></a></li>
+  <ul class="knode kplugins khidden kpayload">
+    {plugins}
   </ul>
   <ul class="knode kfirst kdebug kpayload">
     <li class="kchild">
